--- a/calc-web/src/main/webapp/view/template.zul
+++ b/calc-web/src/main/webapp/view/template.zul
@@ -6,6 +6,19 @@
 	xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd"
 >
 
+	<style>
+		.menu {
+			padding:5px; 
+			border: none; 
+			height:100%;
+		}
+		
+		.menuitem .z-menuitem-btn {
+			 
+			 font-size:14px;
+		}
+		
+	</style>
 			
 	<borderlayout height="100%" width="100%">
 		<north height="10%" border="0">
@@ -15,24 +28,42 @@
 		</north>
 		<center border="0">
 			<borderlayout>
-				<west border="none" splittable="true" collapsible="true" width="20%" hflex="true">
-					<vlayout width="100%">
+				<west border="none" splittable="true" collapsible="true" width="200px" hflex="true">
+				
+					<vlayout width="100%" height="100%">
+						<menubar  orient="vertical" height="500px" sclass="menu">
+							<menuitem 
+									label="${labels.app.menu.imp}" 
+									href="importData.zul" 
+									sclass="menuitem"
+									/>
+							<menuitem 
+									label="${labels.app.menu.calc}" 
+									href="calc.zul" 
+									sclass="menuitem"
+									/>
+							<menuitem 
+									label="${labels.app.menu.analysis}" 
+									href="analysis.zul" 
+									sclass="menuitem"
+									/>
+						</menubar>
 						
-						<div width="100%" style="background: #eeeeee; ">
-							<div height="100px" width="200px" style="margin:auto;" >
-								<a href="importData.zul"><label style="font-size: 20px" value="${labels.app.menu.imp}"></label></a>
-							</div>
-						</div>
-						<div width="100%" style="background: #eeeeee; ">
-							<div height="100px" width="200px" style="margin:auto;" >
-								<a href="calc.zul"><label style="font-size: 20px" value="${labels.app.menu.calc}"></label></a>
-							</div>
-						</div>
-						<div width="100%" style="background: #eeeeee; ">
-							<div height="100px" width="200px" style="margin:auto;" >
-								<a href="analysis.zul"><label style="font-size: 20px" value="${labels.app.menu.analysis}"></label></a>
-							</div>
-						</div>
+<!-- 						<div width="100%" style="background: #eeeeee; "> -->
+<!-- 							<div height="100px" width="200px" style="margin:auto;" > -->
+<!-- 								<a href="importData.zul"><label style="font-size: 20px" value="${labels.app.menu.imp}"></label></a> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 						<div width="100%" style="background: #eeeeee; "> -->
+<!-- 							<div height="100px" width="200px" style="margin:auto;" > -->
+<!-- 								<a href="calc.zul"><label style="font-size: 20px" value="${labels.app.menu.calc}"></label></a> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
+<!-- 						<div width="100%" style="background: #eeeeee; "> -->
+<!-- 							<div height="100px" width="200px" style="margin:auto;" > -->
+<!-- 								<a href="analysis.zul"><label style="font-size: 20px" value="${labels.app.menu.analysis}"></label></a> -->
+<!-- 							</div> -->
+<!-- 						</div> -->
 					</vlayout>
 				</west>
 				<center border="0" self="@{insert(content)}"></center>
