--- a/calc-webapp/src/main/webapp/view/analysis.zul
+++ b/calc-webapp/src/main/webapp/view/analysis.zul
@@ -6,17 +6,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd"
 >
- 
+
 
 	<div 
-		self="@{define(content)}" 
+		self="@{define(content)}"
 		height="100%"  width="100%"
 		apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('model') @init('org.openforis.calc.web.viewmodel.AnalysisViewModel')"
 		>
 		
-		<iframe src="http://localhost:8080/saiku-ui/" width="100%" height="100%"></iframe>
+		<iframe src="/../saiku-ui/" width="100%" height="100%" />
 		
-	</div>		
+	</div>
 
 </zk>
