run and see status of processing chain from html page

--- a/calc-webapp/src/main/webapp/css/bootstrap.css
+++ b/calc-webapp/src/main/webapp/css/bootstrap.css
@@ -1588,6 +1588,8 @@ input[type="checkbox"][readonly] {
   background-color: #fcf8e3;
   border-color: #c09853;
 }
+
+.error,
 .control-group.error .control-label,
 .control-group.error .help-block,
 .control-group.error .help-inline {
