Chain editor and chain executor monitor

--- a/calc-webapp/src/main/webapp/css/style.css
+++ b/calc-webapp/src/main/webapp/css/style.css
@@ -80,5 +80,13 @@ body {
 }
 
 .span4 div{
-	display: inline-block;
+/* 	display: inline-block; */
+}
+
+
+/* 
+max height for modal window
+*/
+.modal-body {
+    max-height: 1500px;
 }
