--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -5,6 +5,10 @@
 
 @CHARSET "UTF-8";
 
+.container ul.breadcrumb {
+	margin-top : 1em;
+	display: none;
+}
 #page {	
 	margin-top : 2em;
 /* 	padding-top: 20px; */
