--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -12,6 +12,7 @@ html, body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	letter-spacing:0.1em;
 }
 /** Home Sections*/
 .section-home, .page-section {
@@ -40,10 +41,21 @@ html, body {
     display: inline-block;
     margin-bottom: 5px;
     font-weight: 100;
-    font-size: 0.6em;
+    font-size: 0.4em;
+}
+.page-section .radio {
+    
 }
 .page-section .form-group {
 	margin-top:40px;
+}
+.section-home button {
+	font-size:0.5em;
+	font-weight: 200;
+}
+.page-section form button {
+	font-size:0.5em;
+	font-weight: 100;
 }
 .calculation {
 	background-color: #2c3e50;
@@ -61,6 +73,8 @@ html, body {
 	background-color: #44454d;
 	border-color: #44454d;
 }
+
+/** Home buttons */
 button.calculation:hover{
 	background-color: #3e5770;
 	border-color: #3e5770;
@@ -96,7 +110,9 @@ button.settings:hover {
 	overflow: visible;
 	border-radius:8px;
 }
-
+/**
+* Footer
+*/
 #footer {
   	height: 150px;
 	position: fixed;
@@ -116,6 +132,8 @@ button.settings:hover {
 #footer .links  button {
 	height:50%;
 	width: 18%;
+	font-size:1.5em;
+	font-weight: 100;
 /* 	font-size: 1.7em; */
 /* 	font-weight: 200; */
 /* 	line-height: 2em; */
