--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -17,13 +17,15 @@ html, body {
 /** Home Sections*/
 .section-home, .page-section {
 	overflow: auto;
-	height: auto;
+/* 	height: auto; */
 	height: 100%;
+	width: 100%;
 	text-align:center;
 	position:relative;
 	color: white;
 	font-size: 1.8em;
 	font-weight: 100;
+	margin: 0px;
 /* margin-top: 30px; */
 /* text-align: center; */
 }
@@ -93,12 +95,18 @@ button.settings:hover {
 }
  .row1 {
 	height: 40%;
+	width: 100%;
+	margin: 0px;
 }
 .row2 {
 	height: 20%;
+	width: 100%;
+	margin: 0px;
 }
 .row3 {
 	height: 40%;
+	width: 100%;
+	margin: 0px;
 }
 
 .btn-home, .btn-home-plus {
