Added feedback when submitting form

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -285,3 +285,13 @@ formula editor
 .buttons {
 	margin-top: 50px;
 }
+
+#messageContainer{
+	z-index : 100;
+	position : absolute;
+	font-size : small;
+	top : 15px;
+	left:0;
+	right:0;
+	text-align: center;
+}
