Fixed error tootlip style

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -300,3 +300,7 @@ formula editor
 .tooltip.error .tooltip-inner {
 	background: #e74c3c;
 }
+
+.tooltip.top.error .tooltip-arrow {
+  border-top-color: #e74c3c;
+}
