--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -209,8 +209,15 @@ formula editor
 }
 
 
-
-
+/**
+calc-step page
+*/
+.data-table {
+	font-size: 0.4em;
+}
+.data-table th {
+	text-align: center;
+} 
 
 .progress {
 /* 	height: 30px;	 */
