fixed height home sections

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -146,6 +146,10 @@ button.settings:hover {
 	margin:0px;
 /* 	top:0px; */
 } 
+#footer-placemark {
+	height: 150px;	
+}
+
 #footer div{
 	height: 100%;
 }
