--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -482,3 +482,63 @@ calc-step page
 .locked .modal-backdrop.in {
 	opacity: 0.1;
 }
+
+/**
+* Typeahead (autocomplete)
+*/
+.twitter-typeahead {
+	width: 100%;
+	height: 100%;
+}
+.typeahead,.tt-query,.tt-hint {
+	width: 100%;
+	height: 100%;
+	padding: 8px 12px;
+	border: 2px solid #ccc;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	outline: none;
+	text-align: left;
+}
+.tt-query {
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.tt-hint {
+	color: #AAA;
+}
+.tt-suggestion {
+	color: #2c3e50;
+}
+.tt-dropdown-menu {
+	text-align: left;
+	width: 422px;
+	margin-top: 12px;
+	padding: 8px 0;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+	-moz-box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+	box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+.tt-suggestion {
+	padding: 3px 20px;
+	font-size: 1.2em;
+	line-height: 24px;
+}
+.tt-suggestion.tt-is-under-cursor {
+	color: #fff;
+	background-color: #0097cf;
+}
+.tt-suggestion p {
+	margin: 0;
+}
+/**
+* End of Typeahead
+*/
