CALC-203 and CALC-207

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -456,7 +456,7 @@ calc-step page
 
 #messageContainer{
 	z-index : 1100;
-	position : absolute;
+	position : fixed;
 	font-size : small;
 	top : 15px;
 	left:0;
