added r script to plot area

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -610,3 +610,8 @@ ul.scroll-menu {
 	border-radius: 5px;
 	width: 100%;
 }
+#sampling-design .aggregate-settings-section {
+	margin-left: 20px; 
+	padding: 20px; 
+	border-left: 1px solid #ecf0f1;
+}
