CALC-239 - UI lock modal not locking properly the user interface when another modal is open

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -522,16 +522,21 @@ calc-step page
 /** 
 * Modal lock component 
 */
-#ui-lock-modal {
-	top: 45%;
-}
 #ui-lock-modal .modal-dialog {
+	height: 100%;
 	width: 300px;
 }
-.locked .modal-backdrop.in {
-	opacity: 0.1;
+
+#ui-lock-modal .progress {
+	position: absolute;
+	top: 45%;
+	width: 100%;
 }
 
+.locked .modal-backdrop.in {
+	opacity: 0.1;
+	z-index: 1070;
+}
 
 /**
 * Dropdown
